--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -1,11 +1,11 @@
 .quiz {
     text-align:center;
+    position:absolute;
     border:1px solid black;
     border-radius: 5px;
     top-margin:200px;
-    width:40%;
-		height:100%;
-		float:left;
+    width:30%;
+    z-index:1;
 }
 
 .answer {
@@ -38,7 +38,9 @@
 }
 
 #graph-wrapper {
-		width:59%;
-		height:100%;
-		float:left;
+        position:absolute;
+        z-index: 2;
+		width:98%;
+        height:98%;
+        margin-right: 50px;
 }
