--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -3,11 +3,12 @@
     position:absolute;
     border:1px solid black;
     border-radius: 5px;
-    top-margin:200px;
     width:30%;
     z-index:2;
     background-color: #FFFFFF;
     opacity: .8;
+    margin-top:10%;
+    margin-bottom:10%;
 }
 
 .answer {
