--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -7,7 +7,11 @@
     z-index:2;
     background-color: #FFFFFF;
     opacity: .8;
-    margin-top:10%;
+    margin-top:3%;
+    margin-bottom:3%;
+    height:80%;
+    overflow-style: scrollbar;
+    overflow-y: scroll;
 }
 
 .answer {
