--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -3,16 +3,14 @@
     position:absolute;
     #border:1px solid black;
     #border-radius: 5px;
-    width:30%;
+    width:50%;
     z-index:2;
     background-color: #FFFFFF;
     opacity: .8;
-    margin-top:4%;
-    margin-bottom:4%;
-    height:80%;
-    overflow-style: scrollbar;
+    height:100%;
     overflow-y: auto;
 }
+
 
 .answer {
     position:relative;
@@ -46,9 +44,10 @@
 #graph-wrapper {
         position:absolute;
         z-index: 1;
-		width:100%;
+		width:71%;
         height:100%;
-        margin-right: 50px;
+        margin-left: 50%;
+        overflow-x:visible;
 }
 #linear-quiz {
     height:100%;
