support for participant IDs, no logouts, assumes survey can enforce hidden participant ID in url

--- a/app_server/static/css/octal-landing.css
+++ b/app_server/static/css/octal-landing.css
@@ -23,6 +23,11 @@ p {
     width: 50%;
 }
 
+.error {
+    font-weight: bold;
+    color: #f00;
+}
+
 #pid {
     font-size: 70%;
     padding: 0.2ex 1ex;
