--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -3,13 +3,13 @@
     position:absolute;
     #border:1px solid black;
     #border-radius: 5px;
-    width:50%;
+    width:40%;
     z-index:2;
     background-color: #FFFFFF;
     opacity: .8;
     height:100%;
     overflow-y: auto;
-    padding: 2em;
+    padding: 5%;
 }
 
 p {
