--- a/app_server/static/css/explore-graph.css
+++ b/app_server/static/css/explore-graph.css
@@ -3,7 +3,9 @@
     display: none;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
+    margin-left: -7em;
+    width: 14em;
     font-size: 0.8em;
     text-align: center;
     background-color: #F0F0F0;
