--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -65,3 +65,16 @@ strong {
     font-weight: bold;
     font-size: larger;
 }
+
+#logout-wrapper {
+    float:right;
+    position:absolute;
+    padding:1px;
+    width:5%;
+    background-color:#eeeeee;
+    border:solid;
+    border-radius:5px;
+    z-index:5;
+    text-align:center;
+    cursor:pointer;
+}
