Override the kmap fix for adding linearity

--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -85,6 +85,7 @@ strong {
     position:absolute;
     padding:1px;
     width:5%;
+    margin-left:94%;
     background-color:#eeeeee;
     border:solid;
     border-radius:5px;
