--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -80,16 +80,8 @@ strong {
     font-size: larger;
 }
 
-#logout-wrapper {
-    float:right;
-    position:absolute;
-    padding:1px;
-    width:5%;
-    margin-left:94%;
-    background-color:#eeeeee;
-    border:solid;
-    border-radius:5px;
-    z-index:5;
-    text-align:center;
-    cursor:pointer;
+#logout {
+    font-weight:lighter;
+    font-size:smaller;
+    opacity:.5;
 }
