Fixing up quiz view

--- a/app_server/static/css/quiz.css
+++ b/app_server/static/css/quiz.css
@@ -107,3 +107,8 @@ strong {
     float:left;
     display:none;
 }
+#questions-remaining {
+    opacity:.4;
+    color:#46a546;
+    font-size:smaller;
+}
