--- a/server/static/css/standard.css
+++ b/server/static/css/standard.css
@@ -28,71 +28,6 @@ input{
 /* ----------------------------------------------------*/
 /* ---------->>> Pure CSS Customizations <<<-----------*/
 /* ----------------------------------------------------*/
-.header-menu{
-    font-size: 100%;
-    margin: 0;
-    line-height: 1em;
-    color: #ECECEC;
-}
-
-.header-menu ul li{
-    display: inline-block;
-}
-
-.header-menu header-menu >ul{
-    height: 1.8em;
-}
-
-.header-menu a{
-    color: #EFEFEF;
-    font-size: 0.9em;
-    text-decoration: none;
-    padding: 0 1em;
-    line-height: 1.8em;
-    display: inline-block;
-}
-
-.header-menu a:hover{
-    text-decoration: underline;
-}
-
-.header-menu  a.heleft{
-    padding-right: 0.2em;
-}
-
-.header-menu  a.heright{
-    padding-left: 0.2em;
-}
-
-.header-pull-right {
-    display: table;
-}
-.header-pull-right > ul, .header-menu > ul{
-    display: table-cell;
-    vertical-align: middle;
-}
-.header-pull-right > ul {
-    text-align: right;
-}
-
-.header-title{
-    display: table-cell;
-    min-width: 25em;
-    vertical-align: middle;
-}
-
-#mobile-header {
-    display: none;
-}
-
-#mobile-header button{
-    border: none;
-    background: #666;
-    padding: 0.2em 1em;
-    color: #ECECEC;
-    border: 1px #302C2C solid;
-}
-
 .sidr ul li.sidr-class-join-line{
     display: none;
 }
@@ -176,53 +111,9 @@ a.expand-collapse-link:hover{
     font-size: 1.1em;
 }
 
-#header {
-    background: #333;
-    z-index: 10;
-    position: relative;
-    width: 100%;
-}
-
-#meta-heading-search{
-    padding: 0;
-}
-
-.meta-home-link{
-    margin-left: 0.2em;
-    padding: 0.5em 0 0.5em 110px;
-    background-image: url('/static/images/metacademy-toolbar-icon1.png');
-    background-repeat: no-repeat;
-    background-position: left center;
-    height: 1.7em;
-}
-
 a.home-nav{
     display: inline;
     padding: 0;
-}
-
-
-#header-search-input, user-form-field input{
-    outline: none;
-    padding: 0.2ex 0.4ex;
-    /* margin-top: 0.3ex; */
-    border: 1px solid #999999;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
-    background-color: white;
-    border-radius: 2px;
-    -moz-box-sizing: border-box; /* Firefox */
-    -webkit-box-sizing: border-box; /* Safari */
-    -ms-box-sizing: border-box; /* IE */
-    box-sizing: border-box;
-    width: 15em;
-}
-#header-search-input:focus, .user-form-field input:focus{
-    border-color: #501644;
-    box-shadow: inset 3px 3px 4px rgba(0,0,0,0.075);
-}
-
-#header-search-input:hover, .user-form-field input:hover{
-    box-shadow: inset 3px 3px 4px rgba(0,0,0,0.075);
 }
 
 #main {
@@ -231,60 +122,32 @@ a.home-nav{
     color: #333;
 }
 
-.dev-note{
-    margin-top: 2em;
-    line-height: 1.2em;
-    font-size: 0.9em;
-    text-align: center;
-    font-style: italic;
-    color: #512161;
+/** OCTAL **/
+
+.main-octal-wrap{
+    margin: 5em auto 1em auto;
+    display: inline-block;
+    padding-bottom: 5em;
+    line-height: 1.2;
 }
 
-.dev-note p{
-    padding: 0.1em 0.7em;
+h1 {
+    font-size:3em;
+    font-weight: bold;
 }
 
-@media only screen and (max-width:999px){
-    #header-search-input{
-        width: 10em;
-    }
-    .header-title{
-        min-width: 19em;
-    }
+h2{
+    font-weight: bold;
 }
 
-@media only screen and (max-width:899px){
-    #mobile-header {
-        display: table-cell;
-        vertical-align: middle;
-        direction: rtl;
-        padding-right: 1em;
-    }
-
-    #header > ul{
-        display: none;
-    }
-    #header{
-        height: 1.85em;
-    }
+p {
+    margin: 1em auto;
+    width: 50%;
 }
 
-@media only screen and (max-width: 767px){
-    .meta-home-link{
-        padding: 0.5em 0 0.5em 35px;
-        background-image: url('/static/images/metacademy-toolbar-icon1-crop.png');
-        background-repeat: no-repeat;
-        background-position: left center;
-        height: 1.7em;
-    }
-    .header-title{
-        min-width: 0;
-    }
-
-    div.dev-note{
-        margin-top: 3em;
-    }
-    .dev-note p{
-        margin-top: 1em;
-    }
+.error {
+    font-weight: bold;
+    color: #f00;
 }
+
+
