--- a/server/static/css/standard.css
+++ b/server/static/css/standard.css
@@ -165,18 +165,27 @@ form table {
     border-spacing: 0 1.5em;
 }
 
+#tbl_study {
+    border: 1px solid black;
+    padding: 1em;
+    background-color: #F6FBFF;
+    display: none;
+}
+
 form table th {
     vertical-align: top;
+    padding-right: 1em;
+    width: 20%;
 }
 
 form input[type=submit] {
-    color: #0069D6;
-    background-color: #F6FBFF;
-    border: 1px solid #0069D6;
+    background-color: #EDFFED;
+    border: 1px solid black;
     display: block;
     margin: 0 auto;
     font-size: 150%;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .helptext {
