initial support for editing graph through a table

--- a/server/static/css/standard.css
+++ b/server/static/css/standard.css
@@ -189,6 +189,10 @@ form input[type=submit] {
     margin: 1em auto;
 }
 
+#formset input, #formset select {
+    width: 97%;
+}
+
 .helptext {
     color: #666;
     font-size: 75%;
