--- a/server/static/css/standard.css
+++ b/server/static/css/standard.css
@@ -152,11 +152,17 @@ ul.logo li {
     margin: 1em auto 0 auto;
     padding: 1em;
 }
+.secret p {
+    margin: 0;
+    padding: 0;
+}
 
 .secret span{
     font-size: 150%;
     font-weight: bold;
 }
+
+form { font-size: 0.9em; }
 
 form table {
     width: 100%;
@@ -170,9 +176,17 @@ form table {
     padding: 1em;
     background-color: #F6FBFF;
     display: none;
+    margin-bottom: 2em;
+}
+
+#tbl_nodeset {
+    border: 1px solid black;
+    padding: 1em;
+    background-color: #EDFFED;
 }
 
 form table th {
+    font-weight: bold;
     vertical-align: top;
     width: 20%;
     table-layout: fixed;
@@ -187,18 +201,23 @@ form input[type=submit] {
     cursor: pointer;
     font-weight: bold;
     margin: 1em auto;
-    width: 6em;
-    height: 6em;
-    -webkit-border-radius: 3em;
-    -moz-border-radius: 3em;
-    border-radius: 3em;
+    width: 5em;
+    height: 5em;
+    -webkit-border-radius: 2.5em;
+    -moz-border-radius: 2.5em;
+    border-radius: 2.5em;
 }
 
 form input[type=submit]:hover {
     background-color: #EDFFED;
 }
 
-form input, textarea {
+form input[type=checkbox] {
+    width: 1.5em;
+    height: 1.5em;
+}
+
+form input[type=text], textarea {
     font-size: 0.75em;
     width: 95%;
     padding: .2em;
