handle PID changes properly when editing

--- a/server/static/css/form.css
+++ b/server/static/css/form.css
@@ -101,3 +101,7 @@ form input[type=checkbox] {
     -moz-user-select: none;
     -ms-user-select: none;
 }
+
+.form_hover {
+    background: #ffa !important;
+}
