--- a/server/static/css/quiz.css
+++ b/server/static/css/quiz.css
@@ -1,3 +1,8 @@
+.known-concept {
+    fill: #EDFFED !important;
+    stroke-width: 4px !important;
+}
+
 #quiz-view-wrapper {
     text-align:left;
     position:absolute;
